Fixed navbar link to heading top spacing

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 html {
-  scroll-padding-top: 11rem;
+  scroll-padding-top: 8.5rem;
 }
 
 .main-wrapper {
